--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/index.css">
-    <link rel="icon" href="img/icon/Credencial.png">
+    <link rel="stylesheet" href="../css/index.css">
+    <link rel="icon" href="../img/icon/Credencial.png">
     
     <title>Ingreso almacenamiento</title>
 </head>
@@ -14,7 +14,7 @@
         <h2>Hangar de proyectos VBA</h2>
         <p>Espacio destinado al almacenamiento y gestión de proyectos realizados por código VBA de ZkAdmin... Estos códigos se encuentran linkeados y descritos para una optima gestión de estos proyectos.</p>
         
-        <a href="pag/hangar.html">
+        <a href="../pag/hangar.html">
         <button>Hangar de proyectos</button>
         </a>
     </div>
