--- a/pag/hangar.html
+++ b/pag/hangar.html
@@ -63,7 +63,7 @@
 
     <!-- CIDERE - Socios -->
     <div class="tarjeta">
-        <img src="/img/icon/Imagen1.png" alt="imagen_proyecto">
+        <img src="../img/icon/Imagen1.png" alt="imagen_proyecto">
         <div class="cuerpo">
             <h3>Gestión de ingreso Socios</h3>
             <p>Herramienta vinculada a formulario google obtiene datos de los diferentes posibles ingresos y gestiona un
