--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
 
     <div class="piepag">
-        <h3>© Copyright ZkAdmin - Mark1. Todos los derechos reservados</h2>
+        <h3>© Copyright ZkAdmin - Silicio GEN 2. Todos los derechos reservados</h2>
     </div>
 
 </body>
