--- a/pag/hangar.html
+++ b/pag/hangar.html
@@ -140,6 +140,19 @@
         </div>
     </div>
 
+      <!-- Planilla de Ejecución Automática-->
+    <div class="tarjeta">
+        <img src="../img/icon/Imagen1.png" alt="imagen_proyecto">
+        <div class="cuerpo">
+            <h3>Planillas de Ejecución Automatizadas</h3>
+            <p>Planilla de Ejecución que genera de forma autónoma hojas por beneficiarios de forma masiva con sus respectivos vinculos y fórmulas.</p>
+            <a href="https://1024terabox.com/s/1Anq-ZYnQVHviqQoN4rbb5A" target="_blank">
+                <button>Descargar</button>
+            </a>
+        </div>
+    </div>
+
+
     <div class="piepag">
         <h3>© Copyright ZkAdmin - Silicio GEN 2. Todos los derechos reservados</h2>
     </div>
